apps/neonatal-care/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neonatal-care
  labels:
    app.kubernetes.io/part-of: neonatal-care
